--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "clean": "rimraf ./dist",
     "clean-test": "rimraf ./dist/test",
     "tsc": "tsc",
-    "umd": "node browserify-umd.js",
+    "rollup": "rollup -c",
+    "rollup_test": "rollup -c rollup_test.config.js",
     "minify": "node minify-umd.js",
-    "build": "yarn run clean && yarn run tsc && yarn run umd && yarn run minify && yarn run bundle_d_ts",
+    "build": "yarn run clean && tsc && yarn run rollup && yarn run minify && yarn run bundle_d_ts",
     "build_test": "yarn run clean-test && tsc -p tsconfig-test.json",
-    "test": "yarn run tsc && mocha ./dist/test/*Test.js",
+    "test": "yarn build_test && mocha ./dist/test/*Test.js",
     "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
     "bundle_d_ts": "node dts-bundle.js",
+    "finish_up": "node finish-up.js",
     "publish_to_npm": "npm publish",
     "all": "yarn run build && yarn run test && yarn run cover"
   },
@@ -28,11 +30,8 @@
     "ts-md5": "^1.2.0"
   },
   "devDependencies": {
-    "browserify": "^13.1.0",
-    "browserify-umdify": "^1.0.3",
     "chai": "^3.5.0",
     "dts-bundle": "^0.7.2",
-    "glob": "^7.0.6",
     "istanbul": "^0.4.5",
     "jsdom": "^9.12.0",
     "karma": "^1.3.0",
@@ -40,11 +39,11 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.1.0",
-    "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
     "rimraf": "^2.5.4",
+    "rollup-plugin-typescript": "^0.8.1",
     "source-map-support": "^0.4.2",
-    "typescript": "^2.2.2",
+    "typescript": "^2.3.2",
     "typings": "^2.1.0",
     "uglify-js": "^2.7.3"
   },
