--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "goodcore",
-  "version": "0.0.22",
+  "version": "0.0.24",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "./dist/goodcore.umd.min.js",
+  "module": "./dist/lib/index.js",
   "typings": "./dist/goodcore.d.ts",
   "files": [
+    "dist/goodcore.umd.js",
+    "dist/goodcore.es.js",
     "dist/goodcore.umd.min.js",
     "dist/goodcore.d.ts",
     "dist/lib/"
