Removed the _ constructor. Broke out is* functions in Test Broke out window mocking in Win

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}\\dist\\lib\\umd.js",
+            "program": "${workspaceRoot}\\dist\\lib\\index.js",
             "outFiles": []
         },
         {
