--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "goodcore",
-  "version": "0.1.0",
+  "version": "0.1.9",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
-  "main": "./dist/goodcore.umd.min.js",
-  "module": "./dist/lib/index.js",
+  "main": "./dist/goodcore.umd.js",
+  "module": "./dist/goodcore.es2015.js",
   "typings": "./dist/goodcore.d.ts",
   "files": [
-    "dist/goodcore.iife.js",
-    "dist/goodcore.umd.js",
-    "dist/goodcore.es.js",
+    "dist/goodcore.iife.min.js",
+    "dist/goodcore.iife.es2015.js",
     "dist/goodcore.umd.min.js",
+    "dist/goodcore.es.min.js",
+    "dist/goodcore.es.es2015.js",
     "dist/goodcore.d.ts",
     "dist/lib/"
   ],
@@ -18,23 +19,20 @@
     "clean": "rimraf ./dist",
     "clean-test": "rimraf ./dist/test",
     "tsc": "tsc",
-    "rollup": "rollup -c",
+    "rollup": "node rollup.js",
     "rollup_test": "rollup -c rollup_test.config.js",
-    "minify": "node minify-umd.js",
-    "build": "yarn run clean && tsc && yarn run rollup && yarn run minify && yarn run bundle_d_ts",
-    "build_test": "yarn run clean-test && tsc -p tsconfig-test.json",
+    "build": "yarn run clean && tsc && yarn run rollup && yarn run bundle_d_ts",
     "test": "yarn run clean && tsc -p tsconfig-test.json && yarn run_test",
     "run_test": "mocha ./dist/test/*Test.js",
     "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
     "bundle_d_ts": "node dts-bundle.js",
-    "finish_up": "node finish-up.js",
     "publish_to_npm": "npm publish",
     "all": "yarn run build && yarn run test && yarn run cover"
   },
-  "dependencies": {
-    "ts-md5": "^1.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "dts-bundle": "^0.7.2",
     "istanbul": "^0.4.5",
@@ -45,7 +43,10 @@
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.1.0",
     "mocha": "^3.0.2",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.6.1",
+    "rollup": "^0.42.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-babili": "^3.0.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-typescript": "^0.8.1",
