--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,7 @@
 {
-  "presets": [
-    [
-      "es2015",
-      {
-        "modules": false
-      }
-    ]
-  ],
+  "presets": [ ["es2015", { "modules": false, "loose": false } ]],
   "plugins": [
+    "transform-es2015-classes",
     "external-helpers"
   ]
 }
