Added the option to limit stacks. Added a create function to Arr that lets you create arrays with values. Added tests for these.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,7 @@
         {
             "name": "Run mocha",
             "type": "node",
+            "request": "launch",
             /* Globally installed mocha */
             "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
             "stopOnEntry": false,
