Re worked Initable to give types in the config object. Re worked most files to allow for strict null checks. Addded sync and async combinator decorators: before, after, around, provided. Added Tests for all new files and for Initable.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
 	    "preserveConstEnums": true,
 		"allowJs": false,
 		"listFiles": false,
-		"listEmittedFiles": false,
+		"strictNullChecks": true,
 		"lib": [
             "dom",
             "es6",
