--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "^8.0.24",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
