Trying to get travis to run coveralls

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "rollup": "node rollup.js",
     "build": "npm run clean && tsc && npm run rollup && npm run bundle_d_ts",
     "test": "npm run clean && tsc -p tsconfig-test.json && npm run run_test",
+    "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
     "run_test": "mocha ./dist/test/*Test.js",
+    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec ./dist/test/*.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
     "bundle_d_ts": "node dts-bundle.js"
   },
@@ -31,6 +33,7 @@
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "coveralls": "^2.13.1",
     "dts-bundle": "^0.7.2",
     "istanbul": "^0.4.5",
     "jsdom": "^9.12.0",
@@ -40,6 +43,7 @@
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.1.0",
     "mocha": "^3.0.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.42.0",
     "rollup-plugin-babel": "^2.7.1",
@@ -47,8 +51,8 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-typescript": "^0.8.1",
-    "source-map-support": "^0.4.2",
-    "typescript": "^2.4.2",
+    "source-map-support": "^0.4.16",
+    "typescript": "^2.5.1",
     "typings": "^2.1.0",
     "uglify-js": "^2.7.3"
   },
