Changed to Gulp build Changed Dom to not use statics Fixed bug in Obj that was calling this instead of calling functions.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "goodcore",
-  "version": "0.6.4",
+  "version": "0.7.0",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "./dist/goodcore.es6.umd.min.js",
   "module": "./dist/lib/index.js",
   "typings": "./dist/goodcore.d.ts",
   "files": [
-    "dist/goodcore.iife.min.js",
-    "dist/goodcore.umd.min.js",
-    "dist/goodcore.es.min.js",
-    "dist/goodcore.es2015.min.js",
+    "dist/goodcore.es5.iife.min.js",
+    "dist/goodcore.es5.umd.min.js",
+    "dist/goodcore.es5.es2015.min.js",
+    "dist/goodcore.es6.min.js",
     "dist/goodcore.es6.umd.min.js",
     "dist/goodcore.d.ts",
     "dist/lib/"
@@ -19,7 +19,8 @@
     "clean": "rimraf ./dist",
     "tsc": "tsc",
     "rollup": "node rollup.js",
-    "build": "npm run clean && tsc && npm run rollup && npm run bundle_d_ts",
+    "gulp": "gulp build",
+    "build": "npm run clean && tsc && npm run gulp && npm run bundle_d_ts",
     "test": "npm run clean && tsc -p tsconfig-test.json && npm run run_test",
     "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
     "run_test": "mocha ./dist/test/*Test.js",
@@ -27,15 +28,47 @@
     "cover": "npm run test && istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
     "bundle_d_ts": "node dts-bundle.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "babel-core": "^6.26.0"
+  },
   "devDependencies": {
     "@types/node": "^8.0.24",
+    "babel-plugin-check-es2015-constants": "^6.22.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-duplicate-keys": "^6.24.1",
+    "babel-plugin-transform-es2015-for-of": "^6.23.0",
+    "babel-plugin-transform-es2015-function-name": "^6.24.1",
+    "babel-plugin-transform-es2015-literals": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
+    "babel-plugin-transform-es2015-object-super": "^6.24.1",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-es2015-sticky-regex": "^6.24.1",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "babel-plugin-transform-es2015-typeof-symbol": "^6.23.0",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.24.1",
+    "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "chalk": "^2.1.0",
     "coveralls": "^2.13.1",
     "dts-bundle": "^0.7.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-better-rollup": "^1.1.1",
+    "gulp-debug": "^3.1.0",
+    "gulp-filter": "^5.0.1",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-typescript": "^3.2.2",
+    "gulp-uglify-es": "^0.1.3",
     "istanbul": "^0.4.5",
     "jsdom": "^9.12.0",
     "karma": "^1.3.0",
@@ -46,16 +79,8 @@
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.3.0",
     "rimraf": "^2.6.1",
-    "rollup": "^0.42.0",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-babili": "^3.0.0",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
     "source-map-support": "^0.4.16",
-    "typescript": "^2.5.1",
-    "typings": "^2.1.0",
-    "uglify-js": "^2.7.3"
+    "typescript": "^2.5.1"
   },
   "repository": {
     "type": "git",
