Moved back to ES5 from ES6 in the released module. ES6 code can still be found under the es6 packages. Also fixed a bug in the Dictionary that caused myDict.get("toString") to return the prototype.

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
   "presets": [ ["es2015", { "modules": false, "loose": false } ]],
   "plugins": [
-    "transform-es2015-classes",
-    "external-helpers"
+    "transform-es2015-classes"
   ]
 }
