--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.10.1",
+  "version": "0.10.2",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "./dist/goodcore.es5.umd.min.js",
   "module": "./dist/lib/index.js",
@@ -19,7 +19,7 @@
     "clean": "rimraf ./dist",
     "tsc": "tsc",
     "rollup": "node rollup.js",
-    "build": "npm run clean && tsc && gulp build-es5 && tsc -p tsconfig.es6.json && gulp build-es6 && npm run bundle_d_ts",
+    "build": "npm run clean && tsc && gulp build-es5 && tsc -p tsconfig.es6.json && gulp build-es6 && npm run bundle_d_ts && gulp copyDTS",
     "test": "npm run clean && tsc -p tsconfig-test.json && npm run run_test",
     "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
     "run_test": "mocha ./dist/test/*Test.js",
