--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.10.2",
+  "version": "0.10.3",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "./dist/goodcore.es5.umd.min.js",
   "module": "./dist/lib/index.js",
@@ -12,6 +12,7 @@
     "dist/goodcore.es6.min.js",
     "dist/goodcore.es6.umd.min.js",
     "dist/goodcore.d.ts",
+    "dist/goodcore.iife.d.ts",
     "dist/lib/"
   ],
   "scripts": {
