BugFixes: Arr.insertAt could not insert at 0
Changes:
Dictionary can no longer set(key, undefined). Pls use delete.

News:
List.last() returns the last element
SortedList.last() returns the last element
SortedList.getInsertIndex is public
SortedList.same checks if the elements in one list are the same as the elements in a second list
SortedList.intersect performs intersection on sorted and unsorted lists
SortedList.union performs union on sorted and unsorted lists

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,14 @@
         },
         {
             "type": "node",
+            "request": "launch",
+            "name": "Debug Perf",
+            "program": "${workspaceRoot}\\dist\\test\\Perf.js",
+            "outFiles": [],
+            "sourceMaps": true
+        },
+        {
+            "type": "node",
             "request": "attach",
             "name": "Attach to Process",
             "address": "localhost",
