--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.10.6",
+  "version": "0.10.8",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "./dist/goodcore.es5.umd.min.js",
   "module": "./dist/lib/index.js",
@@ -29,7 +29,6 @@
     "bundle_d_ts": "node dts-bundle.js"
   },
   "dependencies": {
-    "gulp-sequence": "^0.4.6"
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
@@ -71,6 +70,7 @@
     "gulp-better-rollup": "^1.1.1",
     "gulp-debug": "^3.1.0",
     "gulp-filter": "^5.0.1",
+    "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-typescript": "^3.2.2",
     "gulp-uglify-es": "^0.1.3",
