Type defined returns that could be undefeined Dict.get, List.get etc. Replaced new <Type> with a create function doing this.constructor to allow extension of these clases to return their classes. Added List.getByIndex for indexed lists Added contains(fn) to List and SortedList Added clone and revive to Stack
Added tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,16 @@
 	    "moduleResolution": "node",
 	    "declaration": true,
 	    "noImplicitAny": true,
+		"noImplicitThis": false,
+		"strictNullChecks": true,
 	    "noResolve": false,
 	    "removeComments": true,
 	    "noLib": false,
-	    "emitDecoratorMetadata": true,
-	    "experimentalDecorators": true,
 	    "preserveConstEnums": true,
-		"allowJs": false,
+		"emitDecoratorMetadata": true,
+	    "experimentalDecorators": true,
+	    "allowJs": false,
 		"listFiles": false,
-		"strictNullChecks": true,
 		"lib": [
 			"dom",
 			"es5",
