--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "goodcore",
-  "version": "0.12.2",
+  "version": "0.12.3",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "./dist/goodcore.es5.umd.min.js",
   "module": "./dist/lib/index.js",
   "typings": "./dist/goodcore.d.ts",
+  "unpkg": "dist/goodcore.es5.iife.min.js",
   "files": [
     "dist/goodcore.es5.iife.min.js",
     "dist/goodcore.es5.umd.min.js",
