--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,23 +3,24 @@
 	    "rootDir": "./src",
 		"outDir": "./dist",
 	    "sourceMap": true,
-	    "target": "es6",
+	    "target": "es5",
 	    "module": "es2015",
 	    "moduleResolution": "node",
 	    "declaration": false,
 	    "noImplicitAny": true,
+		"noImplicitThis": false,
+		"strictNullChecks": true,
 	    "noResolve": false,
 	    "removeComments": true,
 	    "noLib": false,
-	    "emitDecoratorMetadata": true,
-	    "experimentalDecorators": true,
 	    "preserveConstEnums": true,
-		"allowJs": false,
+		"emitDecoratorMetadata": true,
+	    "experimentalDecorators": true,
+	    "allowJs": false,
 		"listFiles": false,
-		"strictNullChecks": true,
 		"lib": [
-            "dom",
-            "es6",
+			"dom",
+			"es5",
             "es2015.promise",
 			"scripthost"
         ]
