--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.13.1",
+  "version": "0.14.0",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "./dist/goodcore.es5.umd.min.js",
   "module": "./dist/lib/index.js",
@@ -29,8 +29,7 @@
     "cover": "npm run test && istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
     "bundle_d_ts": "node dts-bundle.js"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.0.4",
     "@types/jquery": "^3.2.12",
@@ -85,8 +84,11 @@
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.3.0",
     "rimraf": "^2.6.1",
+    "rollup": "^0.55.3",
+    "rollup-plugin-uglify": "^3.0.0",
     "source-map-support": "^0.4.16",
-    "typescript": "^2.6.1"
+    "typescript": "^2.7.1",
+    "uglify-es": "^3.3.10"
   },
   "repository": {
     "type": "git",
