changed to webpack 5

--- a/package.json
+++ b/package.json
@@ -2,32 +2,23 @@
   "name": "goodcore",
   "version": "0.16.12",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
-  "main": "goodcore.es5.umd.min.js",
+  "main": "goodcore.bundle.js",
   "module": "index.js",
   "typings": "goodcore.d.ts",
-  "unpkg": "goodcore.es5.iife.min.js",
+  "unpkg": "goodcore.bundle.js",
   "files": [
-    "goodcore.es5.iife.min.js",
-    "goodcore.es5.umd.min.js",
-    "goodcore.es5.es2015.min.js",
-    "goodcore.es6.min.js",
-    "goodcore.es6.umd.min.js",
-    "goodcore.d.ts",
-    "goodcore.iife.d.ts",
     "*"
   ],
   "scripts": {
     "install_tools": "npm install && typings install",
     "clean": "rimraf ./dist",
-    "tsc": "tsc",
-    "rollup": "node rollup.js",
-    "build": "npm run clean && tsc -p tsconfig.es6.json && gulp build-es6 && tsc -p tsconfig.app.json && gulp build-es5 && gulp copyDTS",
+    "dev": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=development && gulp copyDTS",
+    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp copyDTS",
     "test": "npm run clean && tsc -p tsconfig.test.json && npm run run_test",
     "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
     "run_test": "mocha ./dist/test/*Test.js",
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec ./dist/test/*.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "cover": "npm run test && istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
-    "bundle_d_ts": "node dts-bundle.js",
     "deploy": "gulp package && npm publish dist/lib"
   },
   "dependencies": {},
@@ -38,6 +29,7 @@
     "@types/mocha": "^2.2.42",
     "@types/node": "^8.0.24",
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-check-es2015-constants": "^6.22.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
@@ -62,19 +54,22 @@
     "babel-plugin-transform-es2015-unicode-regex": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "base64-js": "^1.2.3",
     "chai": "^3.5.0",
     "chalk": "^2.1.0",
     "coveralls": "^2.13.1",
-    "dts-bundle": "^0.7.2",
+    "fork-ts-checker-webpack-plugin": "^0.4.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
-    "gulp-better-rollup": "^1.1.1",
     "gulp-debug": "^3.1.0",
     "gulp-filter": "^5.0.1",
     "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-typescript": "^3.2.2",
     "gulp-uglify-es": "^0.1.3",
+    "happypack": "^5.0.0-beta.1",
+    "ieee754": "^1.1.9",
+    "isarray": "^2.0.4",
     "istanbul": "^0.4.5",
     "jsdom": "^11.2.0",
     "karma": "^1.3.0",
@@ -84,12 +79,17 @@
     "karma-mocha-reporter": "^2.1.0",
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.3.0",
+    "process": "^0.11.10",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
-    "rollup": "^0.55.3",
-    "rollup-plugin-uglify": "^3.0.0",
     "source-map-support": "^0.4.16",
+    "ts-loader": "^4.0.1",
     "typescript": "^2.7.1",
-    "uglify-es": "^3.3.10"
+    "uglify-es": "^3.3.9",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   },
   "repository": {
     "type": "git",
