--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.16.12",
+  "version": "0.17.5",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "goodcore.bundle.js",
   "module": "index.js",
@@ -12,8 +12,8 @@
   "scripts": {
     "install_tools": "npm install && typings install",
     "clean": "rimraf ./dist",
-    "dev": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=development && gulp copyDTS",
-    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp copyDTS",
+    "dev": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=development && gulp modifyBundle && gulp copyDTS",
+    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp modifyBundle && gulp copyDTS",
     "test": "npm run clean && tsc -p tsconfig.test.json && npm run run_test",
     "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
     "run_test": "mocha ./dist/test/*Test.js",
@@ -63,6 +63,7 @@
     "gulp-babel": "^7.0.0",
     "gulp-debug": "^3.1.0",
     "gulp-filter": "^5.0.1",
+    "gulp-replace": "^0.6.1",
     "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-typescript": "^3.2.2",
@@ -86,10 +87,10 @@
     "ts-loader": "^4.0.1",
     "typescript": "^2.7.1",
     "uglify-es": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "repository": {
     "type": "git",
