--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.17.11",
+  "version": "0.17.13",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "goodcore.bundle.js",
   "module": "index.js",
@@ -12,8 +12,8 @@
   "scripts": {
     "install_tools": "npm install && typings install",
     "clean": "rimraf ./dist",
-    "dev": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=development && gulp modifyBundle && gulp copyDTS",
-    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp modifyBundle && gulp copyDTS",
+    "dev": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=development && gulp modifyBundle && gulp copyDTS && gulp copyWebpackExternalsFn",
+    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp modifyBundle && gulp copyDTS && gulp copyWebpackExternalsFn",
     "test": "npm run clean && tsc -p tsconfig.test.json && npm run run_test",
     "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
     "run_test": "mocha ./dist/test/*Test.js",
