Added Arr.find Added Obj.forEach, difference, transform Removed node util.test usage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.18.3",
+  "version": "0.18.5",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "goodcore.bundle.js",
   "module": "index.js",
@@ -23,13 +23,13 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/jquery": "^3.2.12",
-    "@types/jsdom": "^11.0.1",
-    "@types/mocha": "^2.2.42",
-    "@types/node": "^8.0.24",
+    "@types/chai": "^4.1.4",
+    "@types/jquery": "^3.3.6",
+    "@types/jsdom": "^11.0.6",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.9.3",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.0",
     "babel-plugin-check-es2015-constants": "^6.22.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
@@ -54,43 +54,44 @@
     "babel-plugin-transform-es2015-unicode-regex": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "base64-js": "^1.2.3",
-    "chai": "^3.5.0",
-    "chalk": "^2.1.0",
+    "base64-js": "^1.3.0",
+    "chai": "^4.1.2",
+    "chalk": "^2.4.1",
     "coveralls": "^2.13.1",
-    "fork-ts-checker-webpack-plugin": "^0.4.1",
+    "fork-ts-checker-webpack-plugin": "^0.4.9",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-debug": "^3.1.0",
-    "gulp-filter": "^5.0.1",
-    "gulp-replace": "^0.6.1",
-    "gulp-sequence": "^0.4.6",
-    "gulp-sourcemaps": "^2.6.1",
+    "gulp-filter": "^5.1.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sequence": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^3.2.2",
-    "gulp-uglify-es": "^0.1.3",
-    "happypack": "^5.0.0-beta.1",
-    "ieee754": "^1.1.9",
+    "gulp-uglify-es": "^1.0.4",
+    "happypack": "^5.0.0",
+    "ieee754": "^1.1.12",
     "isarray": "^2.0.4",
     "istanbul": "^0.4.5",
     "jsdom": "^11.2.0",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "^2.1.0",
-    "mocha": "^3.0.2",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "natives": "^1.1.4",
     "process": "^0.11.10",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.1",
-    "source-map-support": "^0.4.16",
-    "ts-loader": "^4.0.1",
-    "typescript": "^2.7.1",
+    "rimraf": "^2.6.2",
+    "source-map-support": "^0.5.9",
+    "ts-loader": "^4.5.0",
+    "typescript": "^3.0.1",
     "uglify-es": "^3.3.9",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-node-externals": "^1.6.0"
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7",
+    "webpack-node-externals": "^1.7.2"
   },
   "bugs": {
     "url": "https://github.com/allnamesrtaken/goodcore/issues"
