--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.18.7",
+  "version": "0.18.8",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "goodcore.bundle.js",
   "module": "index.js",
@@ -13,7 +13,8 @@
     "install_tools": "npm install && typings install",
     "clean": "rimraf ./dist",
     "dev": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=development && gulp modifyBundle && gulp copyDTS && gulp copyWebpackExternalsFn",
-    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp modifyBundle && gulp copyDTS && gulp copyWebpackExternalsFn",
+    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp modifyBundle && gulp copyDTS && gulp copyWebpackExternalsFn && tsc -p tsconfig.bench.json",
+    "bench": "tsc -p tsconfig.bench.json && node ./dist/benchmark/index.js",
     "test": "npm run clean && tsc -p tsconfig.test.json && npm run run_test",
     "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
     "run_test": "mocha ./dist/test/*Test.js",
@@ -23,18 +24,20 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/benchmark": "^1.0.31",
     "@types/chai": "^4.1.4",
     "@types/jquery": "^3.3.6",
     "@types/jsdom": "^11.0.6",
+    "@types/lodash": "^4.14.116",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.9.3",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.0",
     "babel-plugin-check-es2015-constants": "^6.22.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.22.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
@@ -42,7 +45,7 @@
     "babel-plugin-transform-es2015-for-of": "^6.23.0",
     "babel-plugin-transform-es2015-function-name": "^6.24.1",
     "babel-plugin-transform-es2015-literals": "^6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
     "babel-plugin-transform-es2015-object-super": "^6.24.1",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
@@ -55,9 +58,10 @@
     "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "base64-js": "^1.3.0",
+    "benchmark": "^2.1.4",
     "chai": "^4.1.2",
     "chalk": "^2.4.1",
-    "coveralls": "^2.13.1",
+    "coveralls": "^3.0.2",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
@@ -72,12 +76,13 @@
     "ieee754": "^1.1.12",
     "isarray": "^2.0.4",
     "istanbul": "^0.4.5",
-    "jsdom": "^11.2.0",
+    "jsdom": "^12.0.0",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
+    "lodash": "^4.17.10",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "natives": "^1.1.4",
@@ -88,7 +93,7 @@
     "ts-loader": "^4.5.0",
     "typescript": "^3.0.1",
     "uglify-es": "^3.3.9",
-    "webpack": "^4.17.1",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7",
     "webpack-node-externals": "^1.7.2"
