--- a/src/lib/TODO.yml
+++ b/src/lib/TODO.yml
@@ -1,4 +1,2 @@
 TODO
-- Implement NotEquals in Structs
-- Write tests for Zero and IsZero
-- Write tests for Arr.BinarySearch
+- Initable needs rework. Types dont work.
