--- a/tsconfig.es6.json
+++ b/tsconfig.es6.json
@@ -8,18 +8,20 @@
 	    "moduleResolution": "node",
 	    "declaration": false,
 	    "noImplicitAny": true,
+		"noImplicitThis": false,
+		"strictNullChecks": true,
 	    "noResolve": false,
 	    "removeComments": true,
 	    "noLib": false,
-	    "emitDecoratorMetadata": true,
-	    "experimentalDecorators": true,
 	    "preserveConstEnums": true,
-		"allowJs": false,
+		"emitDecoratorMetadata": true,
+	    "experimentalDecorators": true,
+	    "allowJs": false,
 		"listFiles": false,
-		"strictNullChecks": true,
+		"downlevelIteration": true,
 		"lib": [
-            "dom",
-            "es6",
+			"dom",
+			"es6",
             "es2015.promise",
 			"scripthost"
         ]
